<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#A77D81"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/img"/>
        </FrameLayout>
        <TextView
            android:background="@drawable/shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Bama Qyandija Deandra"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:background="@drawable/shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="XII RPL 2"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            />
        <TextView
            android:background="@drawable/shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saya_bama_terlahir_di_tasik_13_februari_2003_saya_adalah_salah_satu_pelajar_di_smkn_4_bandung_jurusan_rekayasa_perangkat_lunak_rpl_saya_merupakan_orang_yang_sangat_tertarik_dengan_dunia_pemrograman_dan_dunia_game_developer_saya_adalah_orang_yang_senang_memimpin_team_dan_merupakan_seorang_inisiator_jika_itu_adalah_hal_yang_saya_sukai_saya_juga_tertarik_untuk_mengerjakan_proyek_besar_baik_itu_aplikasi_maupun_web_karena_saya_sangat_tertarik_dalam_kerja_team_saya_juga_memiliki_surel_dan_nomor_yang_dapat_dihubungi_yaitu_085708339519_untuk_nomor_handphone_dan_bamaqyan_gmail_com_untuk_alamat_email_saya"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

        <TextView
            android:background="@drawable/shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_diri"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>

        <TableLayout
            android:background="@drawable/shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginRight="16dp"
                android:text="@string/ttl"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/tasik_13_februari_2003"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginRight="16dp"
                android:text="@string/kelas"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/xii_rpl_2"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginRight="16dp"
                android:text="@string/hobi"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/melakukan_apapun_yang_membuat_hepi"
                android:textColor="@android:color/black"/>
        </TableRow>
        </TableLayout>
        
        <Button
            android:id="@+id/btn_dial"
            android:background="#B8414D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kontak_bama"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
    

</ScrollView>